@startuml Database Schema - Payment Platform

!define TABLE_COLOR #E3F2FD
!define KEY_COLOR #FFE082

title Payment Platform - Database Schema (PostgreSQL)

entity "merchants" as merchants <<table>> #TABLE_COLOR {
  * **id**: BIGSERIAL <<PK>> #KEY_COLOR
  --
  * merchant_id: VARCHAR(50) <<UK>>
  * name: VARCHAR(255)
  * email: VARCHAR(255) <<UK>>
  * status: VARCHAR(20)
    .. CHECK (status IN ('active', 'inactive', 'suspended'))
  * business_type: VARCHAR(50)
  * onboarding_date: DATE
  * settlement_account: VARCHAR(50)
  * created_at: TIMESTAMP WITH TIME ZONE
  * updated_at: TIMESTAMP WITH TIME ZONE
  --
  indexes:
  - idx_merchant_id
  - idx_merchant_email
  - idx_merchant_status
}

entity "transaction_master" as txn_master <<table>> #TABLE_COLOR {
  * **txn_id**: BIGSERIAL <<PK>> #KEY_COLOR
  --
  * merchant_id: VARCHAR(50) <<FK>>
  * gp_acquirer_id: BIGINT <<FK>>
  * gp_issuer_id: BIGINT <<FK>>
  * txn_date: DATE
  * local_txn_date_time: TIMESTAMP WITH TIME ZONE
  * amount: DECIMAL(15,2)
  * currency: VARCHAR(3)
  * status: VARCHAR(20)
    .. CHECK (status IN ('pending', 'completed', 'failed', 'reversed'))
  * card_type: VARCHAR(20)
  * card_last4: VARCHAR(4)
  * auth_code: VARCHAR(20)
  * response_code: VARCHAR(10)
  * created_at: TIMESTAMP WITH TIME ZONE
  --
  indexes:
  - idx_txn_merchant_id
  - idx_txn_date (BRIN for time-series)
  - idx_txn_status
  - idx_txn_local_date_time DESC
  - idx_txn_composite (merchant_id, txn_date, status)
  --
  partitioning:
  - PARTITION BY RANGE (txn_date)
  - Monthly partitions for performance
}

entity "transaction_details" as txn_details <<table>> #TABLE_COLOR {
  * **txn_detail_id**: BIGSERIAL <<PK>> #KEY_COLOR
  --
  * master_txn_id: BIGINT <<FK>>
  * detail_type: VARCHAR(50)
    .. ('fee', 'tax', 'adjustment', 'refund')
  * amount: DECIMAL(15,2)
  * currency: VARCHAR(3)
  * description: TEXT
  * local_txn_date_time: TIMESTAMP WITH TIME ZONE
  * created_at: TIMESTAMP WITH TIME ZONE
  --
  indexes:
  - idx_detail_master_txn_id
  - idx_detail_composite (master_txn_id, local_txn_date_time DESC)
  - idx_detail_type
}

entity "members" as members <<table>> #TABLE_COLOR {
  * **member_id**: BIGSERIAL <<PK>> #KEY_COLOR
  --
  * member_name: VARCHAR(255)
  * member_type: VARCHAR(20)
    .. ('acquirer', 'issuer', 'both')
  * member_code: VARCHAR(20) <<UK>>
  * country: VARCHAR(3)
  * status: VARCHAR(20)
  * created_at: TIMESTAMP WITH TIME ZONE
  --
  indexes:
  - idx_member_code
  - idx_member_type
}

entity "settlements" as settlements <<table>> #TABLE_COLOR {
  * **settlement_id**: BIGSERIAL <<PK>> #KEY_COLOR
  --
  * merchant_id: VARCHAR(50) <<FK>>
  * settlement_date: DATE
  * settlement_period_start: DATE
  * settlement_period_end: DATE
  * total_amount: DECIMAL(15,2)
  * fee_amount: DECIMAL(15,2)
  * net_amount: DECIMAL(15,2)
  * currency: VARCHAR(3)
  * status: VARCHAR(20)
    .. ('pending', 'processing', 'completed', 'failed')
  * transaction_count: INTEGER
  * bank_reference: VARCHAR(100)
  * processed_at: TIMESTAMP WITH TIME ZONE
  * created_at: TIMESTAMP WITH TIME ZONE
  --
  indexes:
  - idx_settlement_merchant_id
  - idx_settlement_date
  - idx_settlement_status
}

entity "settlement_transactions" as settlement_txns <<table>> #TABLE_COLOR {
  * **id**: BIGSERIAL <<PK>> #KEY_COLOR
  --
  * settlement_id: BIGINT <<FK>>
  * txn_id: BIGINT <<FK>>
  * amount: DECIMAL(15,2)
  * fee_amount: DECIMAL(15,2)
  * included_at: TIMESTAMP WITH TIME ZONE
  --
  indexes:
  - idx_stxn_settlement_id
  - idx_stxn_txn_id
}

entity "audit_logs" as audit <<table>> #TABLE_COLOR {
  * **audit_id**: BIGSERIAL <<PK>> #KEY_COLOR
  --
  * entity_type: VARCHAR(50)
  * entity_id: VARCHAR(100)
  * action: VARCHAR(50)
  * user_id: VARCHAR(100)
  * changes: JSONB
  * ip_address: INET
  * timestamp: TIMESTAMP WITH TIME ZONE
  --
  indexes:
  - idx_audit_entity (entity_type, entity_id)
  - idx_audit_timestamp
  - gin_idx_changes (JSONB)
}

' Relationships
merchants ||--o{ txn_master : "has transactions"
members ||--o{ txn_master : "acquirer"
members ||--o{ txn_master : "issuer"
txn_master ||--o{ txn_details : "has details"
merchants ||--o{ settlements : "receives settlements"
settlements ||--o{ settlement_txns : "contains"
txn_master ||--o{ settlement_txns : "included in"

note right of txn_master
  **Performance Optimizations:**
  - Partitioned by txn_date (monthly)
  - BRIN index on txn_date for range queries
  - Composite index for merchant filtering
  - Read replicas for reporting queries
  
  **Estimated Size:**
  - 5M transactions/day
  - ~180M rows/month
  - 500GB/month with indexes
end note

note left of settlements
  **Settlement Processing:**
  - Daily batch job
  - Groups transactions by merchant
  - Calculates fees and net amounts
  - Creates bank transfer records
  - Idempotent processing (replay-safe)
end note

note bottom of audit
  **Audit Trail:**
  - All data modifications logged
  - JSONB for flexible change tracking
  - Retention: 7 years
  - Consider partitioning by month
end note

@enduml
